--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -94,13 +94,21 @@ body {
 
 
 .erotyk {
-    background-color:  #FFEEBB;
+    background-color:  #ffccbb;
 }
 
 .aforyzm {
-    background-color: yellow;
+    background-color: #eefbff;
 }
 
 .limeryk {
-    background-color: red;
+    background-color: #ffffbb;
+}
+
+.wiersz {
+    background-color: #FFEEBB;
+}
+
+.haiku {
+    background-color: #eeffbb;
 }
